Bug 1266161 - Make DrawForcedBackgroundColor fill the entire draw region, not just the layer's visible region. r=mattwoodrow

We need to do this because the entire draw region will be added to the layer's
valid region after drawing. If there are parts in the valid region that are not
in the visible region, we still need those parts to have valid content, because
in a later frame the visible region may grow to include those parts.

MozReview-Commit-ID: 6zESYbPAmrx

--HG--
extra : rebase_source : 24078d1ff802e53a2eb8895d2c5ffd1fe9507f04